# FamilyTree

./: README.md  __init__.py  pyproject.toml
src/familyrelations/: __init__.py  human.py  network.py
src/familytree/: human.py  network.py
tests/: test_network.py
