[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "familytree"
version = "0.1.0"
description = "A small networkx-backed library for modelling and querying family trees."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Anirudh S", email = "anirudh2suresh@gmail.com" }
]
keywords = ["family tree", "genealogy", "graph", "networkx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Anirudh-097/familytree"
Issues = "https://github.com/Anirudh-097/familytree/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/familytree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
